@startuml

entity Usuarios {
  * id : INT <<PK>>
  --
  nome : VARCHAR(100)
  * email : VARCHAR(150) <<UQ>>
  senha : VARCHAR(255)
  criado_em : DATETIME
}

entity Jogadores {
  * id : INT <<PK>>
  --
  * riot_name : VARCHAR(100)
  * riot_tag : VARCHAR(50)
  puuid : VARCHAR(120) <<UQ>>
  atualizado_em : DATETIME
  criado_em : DATETIME
}

entity Favoritos {
  * id : INT <<PK>>
  --
  * usuario_id : INT <<FK>>
  * jogador_id : INT <<FK>>
  criado_em : DATETIME
  --
  <<UQ>> usuario_id + jogador_id
}

entity Rank_snapshots {
  * id : INT <<PK>>
  --
  * jogador_id : INT <<FK>>
  rank : VARCHAR(50)
  rr : INT
  data_coleta : DATETIME
}

entity Partidas {
  * id : INT <<PK>>
  --
  * jogador_id : INT <<FK>>
  * match_id : VARCHAR(100) <<UQ>>
  mapa : VARCHAR(100)
  modo : VARCHAR(50)
  agente : VARCHAR(100)
  kills : INT
  deaths : INT
  assists : INT
  kdr : DECIMAL(4,2)
  resultado : VARCHAR(20)
  data_partida : DATETIME
  criado_em : DATETIME
}

Usuarios ||--o{ Favoritos : "1:N favoritia"
Jogadores ||--o{ Favoritos : "1:N pertence"
Jogadores ||--o{ Rank_snapshots : "1:N evolução"
Jogadores ||--o{ Partidas : "1:N histórico"

@enduml